# semaphores

./: CMakeLists.txt
lib/: ipc.h  shm.h
src/ex1/: helper.h  main.c
src/ex2/: main.c
src/ex3/: main-v1.c  main-v2.c
src/ex4/: main-v1.c  main-v2.c
